# src

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  .yamlfmt.yaml  Cargo.nix  Cargo.toml  Justfile  book.toml  config.example.toml  flake.nix  hook.nu  rust-layout.kdl
.environments/: environments.toml
.environments/default/scripts/: cd-to-root.nu  check-end-of-files.nu  check-files.nu  check-links.nu  check-merge-conflict.nu  check-trailing-whitespace.nu  check.nu  color.nu  develop.nu  domain.nu  environment-activate.nu  environment-add.nu  environment-common.nu  environment.nu  (+23 more)
.environments/documentation/: Justfile
.environments/git/: Justfile
.environments/just/: Justfile
.environments/markdown/: Justfile
.environments/nix/: Justfile
.environments/rust/: Justfile
.environments/src/: Justfile  shell.nix
.environments/yaml/: Justfile
.github/workflows/: mdbook.yml
.helix/: languages.toml
cli/: Cargo.toml
documentation/: book.toml  configuration.md
documentation/src/: SUMMARY.md  about.md  configuration.md  installation.md
environment/: Cargo.toml
environment/src/: lib.rs
lib/src/: lib.rs
repo/: Cargo.toml
repo/src/: config.rs  error.rs  lib.rs  list.rs  repo.rs
scripts/: check.nu  deps.nu  diff-env.nu  domain.nu  find-recipe.nu  help.nu  history.nu  issue.nu  release.nu  remote.nu  run.nu  view-source.nu
src/: Cargo.toml  main.rs
src/src/: commands.rs  config.rs  log.rs  main.rs  repo.rs
src/src/commands/: add.rs  cd.rs  config.rs  hook.nu  hook.rs  list.rs  remove.rs  src-cd.nu
src/src/commands/hook/: hook.nu  hook.rs
(+35 files in other folders)
