[package]
name = "src"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
inquire = "0.9.3"
repo = { path = "../repo" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.1"
